refactor: use names by BEM according to rules 3.1 in html-and-css.md and 2.1 in html-and-css-extended.md

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header img {
   width: 100%;
 }
-.header .more_inf {
+.header .header__link {
   font-family: fantasy, cursive;
 }
 
@@ -34,7 +34,7 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-item-task-wrapper {
   display: flex;
 }
 ul {
