--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header__img {
   width: 100%;
 }
-.header .header__link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
@@ -37,17 +37,17 @@ body {
 .add-item-task-wrapper {
   display: flex;
 }
-ul {
+.tasks-block {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+.tasks-block__item, .title {
   list-style: none;
 }
-input,button{
+.text-inputs,.checkbox,.btn{
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +56,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for='new-task'] {
+.title,
+.add-item__new {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +70,7 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.text-inputs {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +82,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.text-inputs:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.add-item__new {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.add-item-task-wrapper > .text-inputs {
   width: 318px;
 }
 
 /* Task list */
-li {
+.tasks-block__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,47 +104,45 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.tasks-block__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.tasks-block__item > .checkbox {
   margin: 0 10px;
 }
-li > label {
+.tasks-block__item > .lbl {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.tasks-block__item > .text-inputs {
   width: 226px;
+  display: none;
 }
-button.delete img {
+.btn.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.tasks-block_complete .lbl {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
-  display: none;
-}
 
-ul li.editMode input[type=text] {
+.editMode .text-inputs {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.editMode .lbl {
   display: none;
 }
