--- a/style.css
+++ b/style.css
@@ -121,12 +121,12 @@
   width: 226px;
   display: none;
 }
-.btn.delete img {
+.btn__img_del {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.btn.delete img:hover {
+.btn__img_del:hover {
   transform: rotateZ(0);
 }
 
